# sem-susto

./: .env.development  .env.example  .gitignore  .test_objetos.json  App.tsx  README.md  constants.ts  dev.sh  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  types.ts  vercel.json  vite.config.ts
.agent/rules/: javascript.md  python.md  workflow.md
.agent/workflows/: claude_opus.md  docker.md
.devcontainer/: Dockerfile  Dockerfile.postgres  Dockerfile.python  compose.yaml  devcontainer.json
.docker/: compose.yaml
.docker/scripts/: entrypoint.sh
.metadocs/: escopo.md  monetizacao.md  postmortem_vazamento_env.md  roadmap.md
api/_lib/: banco.ts  rate_limiter.ts  tokens.ts
api/ia/: analisar.ts
api/tokens/: ativar.ts  consultar.ts  gerar.ts
chave_pix/: chave_pix.json
components/: DicaFoto.tsx  FormularioProduto.tsx  LoadingCarrinho.tsx  ModalContato.tsx  ModalDoacao.tsx  ModalRecorte.tsx  ModalTutorial.tsx  ScannerBarras.tsx  TutorialFoto.tsx
contextos/: ContextoRepositorios.tsx
infra/migrations/: 000_cria_tabela_migrations.sql  001_cria_tabela_produtos.sql  002_cria_tabela_tokens.sql  003_cria_tabela_dispositivos.sql  004_cria_tabela_tentativas_ativacao.sql
repositorios/: local-storage.ts  tipos-repositorio.ts
scripts/: clean_dataset.py  filtrar_base_dado_para_brasil.py  gerar_token.py  init_db.py  testar_endpoints.ts  testar_proxy_cosmos.ts  testar_proxy_ia.ts
services/: cosmos.ts  ia.ts  logger.ts  openfoodfacts.ts  utilitarios.ts
services/ia/: fabrica.ts  (+4 more)
(+3 files in other folders)
